--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<div class="links">
 			<a target="_blank" href="https://github.com/icebob">Projects</a>
 			<a target="_blank" href="https://medium.com/@icebob">Blog</a>
-			<a target="_blank" href="mailto:icebobcsi@gmail.com">Contact</a>
+			<a target="_blank" href="mailto:mereg.norbert@gmail.com">Contact</a>
     </div>
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/icebob"><i class="fab fa-github"></i></a>
